--- a/locales/de.json
+++ b/locales/de.json
@@ -261,7 +261,7 @@
         "name": "Name",
         "email": "E-Mail",
         "phone": "Telefonnummer",
-        "comment": "Kommentar",
+        "message": "Nachricht",
         "send": "Senden",
         "post_success": "Danke, dass du uns kontaktiert hast. Wir werden uns so schnell wie möglich bei dir melden.",
         "error_heading": "Bitte passe Folgendes an:",
